apps/eosa/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eosa
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
