apps/eosa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eosa
  namespace: eosa
  labels:
    app: eosa
spec:
  replicas: 5
  selector:
    matchLabels:
      app: eosa
  template:
    metadata:
      labels:
        app: eosa
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: eosa
          image: ghcr.io/noynto/eosa:1.0.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
