apps/eosa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eosa
  namespace: eosa
  labels:
    app: eosa
spec:
  selector:
    app: eosa
  ports:
    - port: 80
      targetPort: 8080
