apps/eosa/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eosa
  namespace: eosa
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - eosa.me
      secretName: eosa-tls
  rules:
    - host: eosa.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eosa
                port:
                  number: 80
